# LLVM

./: .clang-format  CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  README.md  buildProject.sh  compile_commands.json  gmon.out
.clangd/index/: AstDump.cpp.C7E1D2F1905190B9.idx  AstDumpOrig.cpp.06F46D7EDF3A965F.idx  ParseHeader.cpp.61259B47E38A9473.idx
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/Configurations/: .bashrc  .gitconfig
BuildScripts/CMake/: BuildAndRunAllGoogleTests.cmake  BuildDemoLibrary.cmake  BuildGoogleTests.cmake  InstallDemoApplicationLocally.cmake  ProvideBoundedTypes.cmake  ProvideBoundedTypes.cmake.old  RunGoogleTests.cmake  SetBuildChainSpecifications.cmake  SetGlobalVariables.cmake  ToolCompliance.cmake
BuildScripts/Docker/: GCC-Debug-Build  GCC-Release-Build  GeneralBuild  LLVM-Debug-Build  LLVM-Release-Build
CoreFunctions/Application/: AstDump.cpp  AstDump.cpp.orig  AstDumpOrig.cpp  ParseHeader.cpp  StateMachine.cpp  StateMachine.hpp
CoreFunctions/BoundedTypes/: CustomTypes.hpp  SafeTypes.hpp  SafeTypes.inl  SafeTypes_CXX11.hpp  SafeTypes_CXX11.inl  SafeTypes_CXX14.hpp  SafeTypes_CXX14.inl  SafeTypes_CXX17.hpp  SafeTypes_CXX17.inl
GoogleTests/: CMakeLists.txt
GoogleTests/NegativeTests/: CMakeLists.txt
GoogleTests/PositiveTests/: CMakeLists.txt
TestVectors/: Component.hpp  Test.cpp
Tools/DockerBasedDevelopment/: CodeInContainerStartScripts.sh
